# CUDA_MR_Optical_Tracking

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CUDA_MR_Optical_Tracking.ncu-proj  CameraStreamer.cpp  CameraStreamer.h  Cuda_Func.cu  Cuda_Func.cuh  GpuArucoDetector.cpp  GpuArucoDetector.h  clean_opencv.sh  clean_root.sh  compile_opencv.sh  main.cu  main.cuh  notes.md  readme.md  run.sh
aruco/: GpuArucoDetector.cpp  GpuArucoDetector.cu  GpuArucoDetector.hpp  aruco_utils.cpp  aruco_utils.hpp
aruco/apriltag/: apriltag_quad_thresh.cpp  apriltag_quad_thresh.hpp  predefined_dictonaries_apriltag.h  unionfind.hpp  zarray.hpp  zmaxheap.cpp
camera_calibration/: calibration_params.json
cmake/Modules/: FindOpenVR.cmake
src/: CameraStreamer.cpp  Cuda_Func.cuh  main.cu
src/aruco/: GpuArucoDetector.cu
src/aruco/apriltag/: zmaxheap.hpp
